--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Driveways & Patios Houston | Precision Concrete & Construction</title>
-  <meta name="description" content="Residential concrete driveways, patios, slabs, and walkways in Houston & surrounding areas. Fast quotes, clean work, and reliable scheduling." />
+  <title>Precision Concrete & Construction | Houston, TX</title>
+  <meta name="description" content="Houston-area general contractor specializing in residential concrete, roofing, remodeling, and small home improvement projects. Free estimates." />
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Driveways & Patios Houston | Precision Concrete & Construction" />
-  <meta property="og:description" content="Concrete driveways, patios, slabs, and small jobs. Request a free quote." />
+  <meta property="og:title" content="Precision Concrete & Construction | Houston, TX" />
+  <meta property="og:description" content="Concrete, roofing, remodeling, and small home improvement projects. Request a free quote." />
   <meta property="og:type" content="website" />
 
-  <!-- Simple, modern styling (no build tools needed) -->
   <style>
     :root{
       --bg:#0b1220;
@@ -54,7 +53,7 @@
     .cta{display:flex;gap:10px;align-items:center}
     .btn{display:inline-flex;align-items:center;justify-content:center;gap:10px;
       padding:10px 14px;border-radius:999px;border:1px solid var(--line);background:rgba(255,255,255,.06);
-      text-decoration:none;font-weight:700;box-shadow:none;transition:transform .08s ease, background .15s ease}
+      text-decoration:none;font-weight:700;transition:transform .08s ease, background .15s ease}
     .btn:hover{background:rgba(255,255,255,.10)}
     .btn:active{transform:translateY(1px)}
     .btn.primary{border-color:rgba(125,211,252,.55);background:linear-gradient(135deg, rgba(125,211,252,.18), rgba(167,139,250,.12))}
@@ -63,7 +62,7 @@
     .hero{padding:54px 0 26px}
     .grid{display:grid;grid-template-columns: 1.2fr .8fr;gap:22px;align-items:stretch}
     .headline{font-size:44px;line-height:1.08;margin:0 0 12px;letter-spacing:-.7px}
-    .sub{color:var(--muted);font-size:18px;margin:0 0 18px;max-width:55ch}
+    .sub{color:var(--muted);font-size:18px;margin:0 0 18px;max-width:58ch}
     .badges{display:flex;flex-wrap:wrap;gap:10px;margin:0 0 18px}
     .pill{border:1px solid var(--line);background:rgba(255,255,255,.06);padding:7px 10px;border-radius:999px;font-weight:700;font-size:13px;color:var(--muted)}
     .card{background:rgba(17,26,46,.72);border:1px solid var(--line);border-radius:var(--radius);box-shadow:var(--shadow)}
@@ -78,25 +77,29 @@
     section{padding:36px 0}
     .sectionTitle{font-size:26px;margin:0 0 6px}
     .sectionSub{margin:0 0 18px;color:var(--muted)}
-
     .cards{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
     .svc{padding:16px}
     .svc b{display:block;margin-bottom:6px}
     .svc p{margin:0;color:var(--muted)}
-
     .two{display:grid;grid-template-columns:1fr 1fr;gap:14px}
 
-    /* Gallery placeholders */
+    /* Gallery */
     .gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-    .ph{
-   .galimg{
-  width:100%;
-  aspect-ratio: 4/3;
-  object-fit: cover;
-  border-radius:16px;
-  border:1px solid rgba(255,255,255,.12);
-  background: rgba(255,255,255,.04);
+    .galimg{
+      width:100%;
+      aspect-ratio: 4 / 3;
+      object-fit: cover;
+      border-radius:16px;
+      border:1px solid rgba(255,255,255,.15);
+      background: rgba(255,255,255,.04);
     }
+    .cap{
+      margin-top:8px;
+      color:var(--muted);
+      font-weight:800;
+      font-size:13px;
+    }
+    .galCard{padding:12px}
 
     /* Quote form */
     form{padding:16px}
@@ -112,44 +115,39 @@
     footer{padding:26px 0 40px;border-top:1px solid var(--line);color:var(--muted)}
     .foot{display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:space-between}
 
-    /* Responsive */
     @media (max-width: 900px){
       .grid{grid-template-columns:1fr}
       .headline{font-size:38px}
       .cards{grid-template-columns:1fr}
       .two{grid-template-columns:1fr}
-      .gallery{grid-template-columns:1fr 1fr}
+      .gallery{grid-template-columns:1fr}
       .navlinks{display:none}
     }
     @media (max-width: 520px){
       .headline{font-size:34px}
-      .gallery{grid-template-columns:1fr}
       .row{grid-template-columns:1fr}
     }
   </style>
 
-  <!-- Local Business Schema (replace placeholders) -->
+  <!-- Local Business Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Precision Concrete & Construction",
-    "image": "",
     "telephone": "346-508-4236",
     "email": "7hew0rk@gmail.com",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Houston",
       "addressRegion": "TX",
-      "postalCode": "[Zip]",
       "addressCountry": "US"
     },
-    "areaServed": ["Houston", "Hockley", "Cypress", "Katy", "Tomball", "Jersey Village"],
-    "url": "[Your Website URL]",
-    "sameAs": ["[Your Google Business Profile URL]", "[Your Facebook Page URL]"]
+    "areaServed": ["Houston", "Hockley", "Cypress", "Katy", "Tomball", "Jersey Village", "Spring", "Waller"]
   }
   </script>
 </head>
+
 <body>
   <header>
     <div class="wrap nav">
@@ -157,13 +155,13 @@
         <span class="logo" aria-hidden="true"></span>
         <div>
           <b>Precision Concrete & Construction</b><br/>
-          <span style="color:var(--muted);font-size:12px;font-weight:800">Concrete • Driveways • Patios</span>
+          <span style="color:var(--muted);font-size:12px;font-weight:800">Concrete • Roofing • Remodels</span>
         </div>
       </a>
       <nav class="navlinks" aria-label="Primary">
         <a href="#services">Services</a>
         <a href="#process">Process</a>
-        <a href="#gallery">Gallery</a>
+        <a href="#gallery">Before/After</a>
         <a href="#quote">Free Quote</a>
       </nav>
       <div class="cta">
@@ -177,29 +175,29 @@
     <div class="hero">
       <div class="grid">
         <div>
-          <h1 class="headline">Concrete driveways & patios done clean — across Houston.</h1>
-          <p class="sub">We manage your project start-to-finish and coordinate a proven concrete crew. Fast estimates, clear scopes, and reliable scheduling.</p>
+          <h1 class="headline">Concrete, roofing, and small remodels — managed cleanly across Houston.</h1>
+          <p class="sub">We manage your project start-to-finish and coordinate reliable subcontractors. Clear scopes, fast estimates, and dependable scheduling for residential work.</p>
           <div class="badges">
-            <span class="pill">Free On‑Site Estimate</span>
-            <span class="pill">Driveways • Patios • Slabs</span>
-            <span class="pill">Broom Finish • Control Joints</span>
+            <span class="pill">Free On-Site Estimate</span>
+            <span class="pill">Concrete • Roofing • Remodels</span>
+            <span class="pill">Clear Scope • Clean Work</span>
             <span class="pill">Houston & Surrounding Areas</span>
           </div>
           <div style="display:flex;flex-wrap:wrap;gap:10px">
             <a class="btn primary" href="#quote">Request a Quote</a>
             <a class="btn" href="#services">View Services</a>
           </div>
-          <p class="note">Text a photo + address for a same‑day ballpark: <a href="sms:+13465084236">346-508-4236</a></p>
+          <p class="note">Text a photo + address for a same-day ballpark: <a href="sms:+13465084236">346-508-4236</a></p>
         </div>
 
         <aside class="card heroCard">
           <h3>What you get</h3>
-          <p>Simple, professional work that lasts — with no surprises.</p>
+          <p>Simple, professional results — with no surprises.</p>
           <ul>
-            <li><span class="check">✓</span>Written scope, thickness, reinforcement, and finish</li>
-            <li><span class="check">✓</span>Proper base prep + compaction recommendations</li>
-            <li><span class="check">✓</span>Clean forms, straight edges, and neat broom finish</li>
-            <li><span class="check">✓</span>Optional demo/haul‑off and grading</li>
+            <li><span class="check">✓</span>Written scope, materials, and finish</li>
+            <li><span class="check">✓</span>Clean scheduling and communication</li>
+            <li><span class="check">✓</span>Respect for your property and cleanup</li>
+            <li><span class="check">✓</span>Small jobs welcome</li>
           </ul>
         </aside>
       </div>
@@ -207,11 +205,11 @@
 
     <section id="services">
       <h2 class="sectionTitle">Services</h2>
-      <p class="sectionSub">Residential concrete work — driveways, patios, slabs, and the small jobs others don’t want.</p>
+      <p class="sectionSub">Residential work you can hire a GC for — concrete, roofing, and upgrades.</p>
       <div class="cards">
-        <div class="card svc"><b>Driveways</b><p>Remove & replace, extensions, and new pours. Control joints and clean tie‑ins.</p></div>
-        <div class="card svc"><b>Patios</b><p>Backyard slabs for seating, grills, pergolas, and outdoor living upgrades.</p></div>
-        <div class="card svc"><b>Slabs & Pads</b><p>Shed slabs, trash pads, RV pads, walkways, and small flatwork.</p></div>
+        <div class="card svc"><b>Concrete</b><p>Driveways, patios, slabs, walkways, pads, and small flatwork.</p></div>
+        <div class="card svc"><b>Roofing</b><p>Roof repairs, replacements, leak fixes, and basic flashing work.</p></div>
+        <div class="card svc"><b>Interior Upgrades</b><p>Paint, flooring, light fixtures, drywall repairs, and small remodels.</p></div>
       </div>
     </section>
 
@@ -221,35 +219,47 @@
           <h2 class="sectionTitle" style="margin-top:0">Our process</h2>
           <p class="sectionSub">Clear steps so you know what’s happening and when.</p>
           <ol style="margin:0;padding-left:18px;color:var(--muted);display:grid;gap:10px">
-            <li><b style="color:var(--text)">Measure & quote</b> — we confirm dimensions, access, and scope.</li>
-            <li><b style="color:var(--text)">Prep day</b> — forms, base, reinforcement, and grading check.</li>
-            <li><b style="color:var(--text)">Pour & finish</b> — placement, broom finish, joints, and cleanup.</li>
-            <li><b style="color:var(--text)">Cure & walkthrough</b> — care instructions and final check.</li>
+            <li><b style="color:var(--text)">Measure & quote</b> — confirm scope, access, and timeline.</li>
+            <li><b style="color:var(--text)">Prep</b> — protection, demo (if needed), and materials staged.</li>
+            <li><b style="color:var(--text)">Build</b> — coordinated crew, clean execution, and updates.</li>
+            <li><b style="color:var(--text)">Walkthrough</b> — final check and closeout.</li>
           </ol>
         </div>
         <div class="card" style="padding:16px">
           <h2 class="sectionTitle" style="margin-top:0">Service area</h2>
-          <p class="sectionSub">We cover Houston and nearby cities. If you’re not sure, ask.</p>
+          <p class="sectionSub">Houston and nearby cities. If you’re not sure, ask.</p>
           <div style="display:flex;flex-wrap:wrap;gap:10px">
             <span class="pill">Houston</span><span class="pill">Hockley</span><span class="pill">Cypress</span>
             <span class="pill">Katy</span><span class="pill">Tomball</span><span class="pill">Jersey Village</span>
             <span class="pill">Spring</span><span class="pill">Waller</span>
           </div>
-          <p class="note">Need a permit? If your driveway connects to a state highway (FM/SH/US), TxDOT may be required. We’ll tell you what applies.</p>
+          <p class="note">If your driveway connects to a state highway (FM/SH/US), TxDOT may be required. We’ll tell you what applies.</p>
         </div>
       </div>
     </section>
 
     <section id="gallery">
-      <h2 class="sectionTitle">Recent work</h2>
-      <p class="sectionSub">Replace these placeholders with your job photos as you complete projects.</p>
+      <h2 class="sectionTitle">Before & After</h2>
+      <p class="sectionSub">Examples of the type of work we coordinate. (Replace with your own project photos anytime.)</p>
+
       <div class="gallery">
-      <div class="gallery">
-  <img class="galimg" src="driveway-before-after.png" alt="Driveway before and after - Precision Concrete & Construction">
-  <img class="galimg" src="roof-before-after.png" alt="Roof before and after - Precision Concrete & Construction">
-  <img class="galimg" src="interior-before-after.png" alt="Interior paint & flooring before and after - Precision Concrete & Construction">
-</div>
+        <div class="card galCard">
+          <img class="galimg" src="driveway-before-after.png" alt="Concrete driveway before and after - Precision Concrete & Construction">
+          <div class="cap">Concrete Driveway — Before & After</div>
+        </div>
+
+        <div class="card galCard">
+          <img class="galimg" src="roof-before-after.png" alt="Roof replacement before and after - Precision Concrete & Construction">
+          <div class="cap">Roofing — Before & After</div>
+        </div>
+
+        <div class="card galCard">
+          <img class="galimg" src="interior-before-after.png" alt="Interior paint and flooring before and after - Precision Concrete & Construction">
+          <div class="cap">Interior Paint & Flooring — Before & After</div>
+        </div>
       </div>
+
+      <p class="note" style="margin-top:12px">Tip: Your own job photos will rank better on Google than stock examples.</p>
     </section>
 
     <section id="quote">
@@ -257,15 +267,11 @@
         <div class="card" style="padding:16px">
           <h2 class="sectionTitle" style="margin-top:0">Request a free quote</h2>
           <p class="sectionSub">Fill this out and we’ll respond quickly. For fastest service, text a photo + address.</p>
-          <!--
-            This form uses FormSubmit (no backend needed).
-            1) Replace YOUR_EMAIL_HERE with your email.
-            2) On first submit, FormSubmit will email you a confirmation.
-            3) You can also replace this with a Google Form later.
-          -->
+
           <form action="https://formsubmit.co/7hew0rk@gmail.com" method="POST">
-            <input type="hidden" name="_subject" value="New Concrete Quote Request" />
+            <input type="hidden" name="_subject" value="New Quote Request - Precision Concrete & Construction" />
             <input type="hidden" name="_captcha" value="false" />
+
             <div class="row">
               <div>
                 <label for="name">Name</label>
@@ -284,10 +290,10 @@
               <div>
                 <label for="service">Service</label>
                 <select id="service" name="service" required>
-                  <option value="Driveway">Driveway</option>
-                  <option value="Patio">Patio</option>
-                  <option value="Slab/Pad">Slab / Pad</option>
-                  <option value="Walkway">Walkway</option>
+                  <option value="Concrete">Concrete</option>
+                  <option value="Roofing">Roofing</option>
+                  <option value="Interior Upgrade">Interior Upgrade</option>
+                  <option value="Remodel">Remodel</option>
                   <option value="Other">Other</option>
                 </select>
               </div>
@@ -306,7 +312,7 @@
             <input id="address" name="address" placeholder="Street, City, ZIP" required />
 
             <label for="details">Details</label>
-            <textarea id="details" name="details" placeholder="Approx dimensions, remove & replace or new, any slope/drainage concerns, gate access, etc." required></textarea>
+            <textarea id="details" name="details" placeholder="Approx dimensions, remove & replace or new, any slope/drainage concerns, leak location, paint/flooring scope, etc." required></textarea>
 
             <button class="btn primary" type="submit" style="width:100%;padding:12px;border-radius:16px;cursor:pointer">Send Request</button>
             <p class="note">By submitting, you agree we may contact you by call/text to coordinate an estimate.</p>
@@ -325,16 +331,15 @@
           <hr style="border:0;border-top:1px solid var(--line);margin:16px 0" />
           <h3 style="margin:0 0 8px">What we specialize in</h3>
           <ul style="margin:0;padding-left:18px;color:var(--muted);display:grid;gap:8px">
-            <li>Residential concrete flatwork</li>
-            <li>Clean edges, broom finish, neat joints</li>
-            <li>Driveway replacements & extensions</li>
-            <li>Patios and small slabs</li>
+            <li>Concrete driveways, patios, slabs, and flatwork</li>
+            <li>Roof repairs and replacements</li>
+            <li>Paint, flooring, and light remodeling</li>
+            <li>Small projects welcome</li>
           </ul>
-          <p class="note" style="margin-top:14px">Tip: Add a Google Business Profile and link it here — it’s the best lead source in Houston.</p>
+          <p class="note" style="margin-top:14px">Tip: Add your website link to your Google Business Profile for more calls.</p>
         </div>
       </div>
     </section>
-
   </main>
 
   <footer>
@@ -353,3 +358,4 @@
   </script>
 </body>
 </html>
+
